--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:postgresql://db.kklxotyutzhkahgfojpe.supabase.co:5432/postgres
+spring.application.name=demo
+
+spring.datasource.url=jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:6543/postgres?user=postgres.kklxotyutzhkahgfojpe&password=btssio2024$*ous
 spring.datasource.username=postgres
 spring.datasource.password=btssio2024$*ous
 spring.jpa.show-sql=true
